# helloSCtest

./: CMakeLists.txt
editors/: CMakeLists.txt
src/: CMakeLists.txt  helloSc.cpp
